--- a/pod/01-pod.yaml
+++ b/pod/01-pod.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
-  Namespace: roboshop
+  name: hello-pod
+  namespace: roboshop
 spec:
   containers:
   - name: nginx
