--- a/pod/01-pod.yaml
+++ b/pod/01-pod.yaml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: hello-pod
+  name: multicontainer
   
 spec:
-  # list of containers
+ 
   containers:
-  - name: hello-pod
+  - name: nginx
     image: nginx
-    #here with this line port will not be opened, just for information
+    
     ports:
     - containerPort: 80
+  - name: almalinux
+    image: almalinux:8
+    command: ["sleep", "300"]
+
+
+
