--- a/pod/04-labels.yaml
+++ b/pod/04-labels.yaml
@@ -4,7 +4,7 @@ metadata:
    name: label-demo
    labels:
       course: Devops 
-      Trainer: "appalaraju"
+      Trainer: appalaraju
 spec:
   containers:
   - name: nginx
