--- a/pod/07-env.yaml
+++ b/pod/07-env.yaml
@@ -11,4 +11,8 @@ spec:
       value: devops
     - name: joindevops
       value: 150hrs
+    - name: mirtipati
+      value: hello devops
+    - name: training
+      value: newly joindevops
     
