--- a/pod/08-pod-config.yaml
+++ b/pod/08-pod-config.yaml
@@ -16,7 +16,7 @@ spec:
         configMapKeyRef:
           name: configmap-demo
           key: course
-    - name: trainer
+    - name: duration
       valueFrom:
         configMapKeyRef:
           name: configmap-demo
