--- a/service/01-cluster-service.yaml
+++ b/service/01-cluster-service.yaml
@@ -27,18 +27,17 @@ spec:
       port: 80
       targetPort: 80
 
-
-
-# apiVersion: v1
-# kind: Pod
-# metadata: 
-#   name: debug
-#   labels:
-#     server: debug
-# spec:
-#   containers:
-#   - name: almalinux
-#     image: almalinux
-#     command: ["sleep","100000"]
+---
+apiVersion: v1
+kind: Pod
+metadata: 
+  name: debug
+  labels:
+    server: debug
+spec:
+  containers:
+  - name: almalinux
+    image: almalinux
+    command: ["sleep","100000"]
     
 
