--- a/sets/02-deployment.yaml
+++ b/sets/02-deployment.yaml
@@ -14,15 +14,16 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 2 # 2 unavailbale and remaining update
-      maxSurge: 2 # at a time 2 pods update completion
+      maxUnavailable: 2 # we asked for 10, we are okay if 9 are running at the time of upgrade
+      maxSurge: 2 # we asked for 10, we are okay at the time of upgrade 11 are running
+  template:
     metadata:
       labels:
         app: nginx
     spec:
       containers:
       - name: nginx
-        image: nginx
+        image: nginx:1.22.1
         ports:
         - containerPort: 80
 
