--- a/storage/03-ebs-static.yaml
+++ b/storage/03-ebs-static.yaml
@@ -10,7 +10,7 @@ spec:
   csi:
     driver: ebs.csi.aws.com
     fsType: ext4
-    volumeHandle: vol-0a35634302c13c4b4
+    volumeHandle: vol-0a9a768d2ef2f6185
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -38,7 +38,8 @@ spec:
     volumeMounts:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
-  
+  nodeSelector:
+    zone: 1b
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
