--- a/storage/03-ebs-static.yaml
+++ b/storage/03-ebs-static.yaml
@@ -10,7 +10,7 @@ spec:
   csi:
     driver: ebs.csi.aws.com
     fsType: ext4
-    volumeHandle: vol-0a9a768d2ef2f6185
+    volumeHandle: vol-083a4d16d548c51eb
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -39,7 +39,7 @@ spec:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    zone: 1f
+    zone: 1a
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
