--- a/storage/04-ebs-dyanmic.yaml
+++ b/storage/04-ebs-dyanmic.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ebs-claim
+  name: ebs-dynamic
 spec:
   accessModes:
     - ReadWriteOnce
