--- a/storage/04-ebs-dyanmic.yaml
+++ b/storage/04-ebs-dyanmic.yaml
@@ -5,12 +5,11 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ebs-storageclass
+  storageClassName: ebs-sc
   resources:
     requests:
       storage: 4Gi
 ---
-
 apiVersion: v1
 kind: Pod
 metadata:
@@ -25,7 +24,7 @@ spec:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    zone: 1a
+    zone: 1b
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
@@ -38,10 +37,8 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    demo: ebs-dynamic
+    demo: ebs-static
   ports:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 80 #container-port
-  
-  
