--- a/storage/04-ebs-dyanmic.yaml
+++ b/storage/04-ebs-dyanmic.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ebs-sc
+  storageClassName: ebs-storageclass
   resources:
     requests:
       storage: 4Gi
