--- a/storage/04-ebs-dyanmic.yaml
+++ b/storage/04-ebs-dyanmic.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -5,10 +6,11 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ebs-storageclass
+  storageClassName: ebs-sc
   resources:
     requests:
       storage: 4Gi
+
 ---
 apiVersion: v1
 kind: Pod
@@ -24,7 +26,7 @@ spec:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    zone: us-east-1a
+    zone: 1a
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
@@ -37,8 +39,9 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    demo: ebs-static
+    demo: ebs-dynamic
   ports:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 80 #container-port
+  
