--- a/storage/03-ebs-static.yaml
+++ b/storage/03-ebs-static.yaml
@@ -39,7 +39,7 @@ spec:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    zone: 1a
+    zone: us-east-1a
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
