--- a/storage/04-ebs-dynamic.yaml
+++ b/storage/04-ebs-dynamic.yaml
@@ -12,6 +12,7 @@ spec:
       storage: 4Gi
 
 ---
+
 apiVersion: v1
 kind: Pod
 metadata:
@@ -26,7 +27,7 @@ spec:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    zone: 1a
+    zone: us-east-1a
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
@@ -44,4 +45,5 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 80 #container-port
+
   
