--- a/storage/03-ebs-static.yaml
+++ b/storage/03-ebs-static.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ebs-static
 spec:
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteOnce #EBS volume should have readwriteonce, because it HD.
   capacity:
     storage: 10Gi
   csi:
@@ -17,7 +17,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: ebs-static
 spec:
-  storageClassName: "" # Empty string must be explicitly set otherwise default StorageClass will be set
+  storageClassName: "" # Empty string must be explicitly set otherwise default StorageClass will be set. for static provisioning this is empty
   volumeName: ebs-static
   accessModes:
     - ReadWriteOnce
@@ -39,7 +39,7 @@ spec:
     - name: nginx-data
       mountPath: /usr/share/nginx/html
   nodeSelector:
-    zone: 1a
+    zone: 1b
   volumes:
   - name: nginx-data
     persistentVolumeClaim:
@@ -57,4 +57,3 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 80 #container-port
-  
